--- a/DoitAlarm/NibCells/TitleViewCell.xib
+++ b/DoitAlarm/NibCells/TitleViewCell.xib
@@ -38,6 +38,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="titleInput" destination="bd0-PM-8tq" id="2im-pc-xx3"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </tableViewCell>
     </objects>
