--- a/DoitAlarm/NibCells/TitleViewCell.xib
+++ b/DoitAlarm/NibCells/TitleViewCell.xib
@@ -10,38 +10,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TitleViewCell" customModule="DoitAlarm" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMk-7D-tdg">
-                        <rect key="frame" x="20" y="20" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="계획을 넣으세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMk-7D-tdg">
+                        <rect key="frame" x="10" y="15" width="300" height="50"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bd0-PM-8tq">
-                        <rect key="frame" x="25" y="56" width="270" height="74"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
-                    </textField>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hco-q3-Pbg">
+                        <rect key="frame" x="285" y="29" width="20" height="22"/>
+                        <state key="normal" image="plus.circle.fill" catalog="system"/>
+                        <connections>
+                            <action selector="pressAddButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="94g-Kq-ExE"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bd0-PM-8tq" firstAttribute="top" secondItem="NMk-7D-tdg" secondAttribute="bottom" constant="15" id="2ic-gn-Unq"/>
-                    <constraint firstAttribute="trailing" secondItem="bd0-PM-8tq" secondAttribute="trailing" constant="25" id="CvF-SM-gWZ"/>
-                    <constraint firstItem="NMk-7D-tdg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Jok-WP-ZTh"/>
-                    <constraint firstAttribute="bottom" secondItem="bd0-PM-8tq" secondAttribute="bottom" constant="20" id="TZA-O0-XZP"/>
-                    <constraint firstItem="NMk-7D-tdg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="pTo-Yb-FYv"/>
-                    <constraint firstItem="bd0-PM-8tq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" id="sUs-0u-g3B"/>
+                    <constraint firstItem="Hco-q3-Pbg" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0yv-Ra-zst"/>
+                    <constraint firstAttribute="trailing" secondItem="Hco-q3-Pbg" secondAttribute="trailing" constant="15" id="2cb-Hw-ydW"/>
+                    <constraint firstItem="NMk-7D-tdg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Fh9-1g-eL8"/>
+                    <constraint firstAttribute="bottom" secondItem="NMk-7D-tdg" secondAttribute="bottom" constant="15" id="MPg-JY-jh5"/>
+                    <constraint firstItem="NMk-7D-tdg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Zk2-Lk-YR6"/>
+                    <constraint firstAttribute="trailing" secondItem="NMk-7D-tdg" secondAttribute="trailing" constant="10" id="rBh-fb-Mmv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="titleInput" destination="bd0-PM-8tq" id="2im-pc-xx3"/>
+                <outlet property="addTitleButton" destination="Hco-q3-Pbg" id="aaU-Ml-TpA"/>
+                <outlet property="titleInputLabel" destination="NMk-7D-tdg" id="KqS-In-feL"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
